adicionando nós independentes

--- a/arquivos_ini/sim-config.ini
+++ b/arquivos_ini/sim-config.ini
@@ -72,6 +72,9 @@ SN.node[*].Communication.Routing.beaconInterval = 1
 SN.node[*].Communication.Routing.timeToMoveMax = 10
 SN.node[*].Communication.Routing.minEnergy = 0.05
 
+# iNodes: [26 to 29]
+SN.node[26..29].Communication.Routing.isIndependent = true
+
 SN.node[*].Communication.Routing.collectTraceInfo = true
 SN.node[*].Communication.Routing.collectOutputInfo = true
 
