adding iNode and relay vectors

--- a/arquivos_ini/sim-config.ini
+++ b/arquivos_ini/sim-config.ini
@@ -6,7 +6,8 @@ include ../WiseCastalia.ini 	# ALWAYS include the WiseCastalia.ini file
 # ==============================================
 sim-time-limit = 200s
 
-SN.numNodes = 30
+# SN.numNodes = 30
+SN.numNodes = 11
 SN.field_x = 200		# meters
 SN.field_y = 200		# meters
 
@@ -15,7 +16,8 @@ include topology_30_nodes_200x200.ini
 SN.dummyChannel.collectTraceInfo = true
 SN.coverageNode.fieldX = 200
 SN.coverageNode.fieldY = 200
-SN.coverageNode.numNodes = 35
+# SN.coverageNode.numNodes = 30
+SN.coverageNode.numNodes = 11
 SN.coverageNode.vector-recording = false
 #SN.wiseTerrain.gui = "opencv" # NOTE: run in console if you want to enable 'opencv' GUI
 SN.wiseTerrain.gui_wait_start = false 
@@ -25,7 +27,7 @@ SN.wiseTerrain.gui_wait_start = false
 # Resource Manager (cpu, memory, energy)
 # ==============================================
 SN.node[0].ResourceManager.initialEnergy = 3744000
-SN.node[1..29].ResourceManager.initialEnergy = 37440 #(4 AA batteries)
+SN.node[1..10].ResourceManager.initialEnergy = 37440 #(4 AA batteries)
 SN.node[0].ResourceManager.initialEnergy = 3744000
 SN.node[*].ResourceManager.collectTraceInfo = false #se isso ficar como true, da problema
 #18720 Joules is the typical energy of two AA batteries
@@ -33,19 +35,19 @@ SN.node[*].ResourceManager.collectTraceInfo = false #se isso ficar como true, da
 # ==============================================
 # Sensor Manager
 # ==============================================
-SN.node[0..29].SensorManagerName = "CritDirectionalSensor" # Camera Node
-SN.node[0..29].SensorManager.collectTraceInfo = false
-SN.node[0..29].SensorManager.collectOutputInfo = false
-SN.node[0..29].SensorManager.sensorTypes = "multimedia"
+SN.node[0..10].SensorManagerName = "CritDirectionalSensor" # Camera Node
+SN.node[0..10].SensorManager.collectTraceInfo = false
+SN.node[0..10].SensorManager.collectOutputInfo = false
+SN.node[0..10].SensorManager.sensorTypes = "multimedia"
 SN.node[0].SensorManager.isSink = true
-SN.node[0..29].SensorManager.video = "../Parameters/videoTraces/multiQoE/st_container_cif_h264_300_20"
+SN.node[0..10].SensorManager.video = "../Parameters/videoTraces/multiQoE/st_container_cif_h264_300_20"
 # SN.node[11..20].SensorManager.video = "../Parameters/videoTraces/multiQoE/st_uav_1_cif_h264_300_20"
 # SN.node[21..34].SensorManager.video = "../Parameters/videoTraces/multiQoE/st_uav_2_cif_h264_300_20"
-SN.node[0..29].SensorManager.fecType = 2         #0 - without FEC | 1 - standard FEC | 2 - QoE-aware FEC
-SN.node[0..29].SensorManager.fecRedundancy = 0.8 #from 0(0%) to 1(100%)
-SN.node[0..29].SensorManager.gopSize = 20
-SN.node[0..29].SensorManager.pRedundancy = 0.5   #from 0(0%) to 1(100%) percentage of P-frames with redundancy
-SN.node[0..29].SensorManager.energyPerSample = 0.5
+SN.node[0..10].SensorManager.fecType = 2         #0 - without FEC | 1 - standard FEC | 2 - QoE-aware FEC
+SN.node[0..10].SensorManager.fecRedundancy = 0.8 #from 0(0%) to 1(100%)
+SN.node[0..10].SensorManager.gopSize = 20
+SN.node[0..10].SensorManager.pRedundancy = 0.5   #from 0(0%) to 1(100%) percentage of P-frames with redundancy
+SN.node[0..10].SensorManager.energyPerSample = 0.5
 
 # ==============================================
 # Application 
@@ -64,8 +66,8 @@ SN.node[*].Application.proposal = 2
 SN.node[*].Communication.RoutingProtocolName = "PSORouting"
 SN.node[*].Communication.Routing.netDataFrameOverhead = 6
 SN.node[0].Communication.Routing.netBufferSize = 100
-SN.node[1..29].Communication.Routing.netBufferSize = 60
-SN.node[1..29].Communication.Routing.isSource = true
+SN.node[1..10].Communication.Routing.netBufferSize = 60
+SN.node[1..10].Communication.Routing.isSource = true
 SN.node[*].Communication.Routing.destinationAddress = "0"
 SN.node[*].Communication.Routing.controllerAddress = "0"
 SN.node[*].Communication.Routing.beaconInterval = 1    
@@ -73,7 +75,7 @@ SN.node[*].Communication.Routing.timeToMoveMax = 10
 SN.node[*].Communication.Routing.minEnergy = 0.05
 
 # iNodes: [26 to 29]
-SN.node[26..29].Communication.Routing.isIndependent = true
+SN.node[7..10].Communication.Routing.isIndependent = true
 
 SN.node[*].Communication.Routing.collectTraceInfo = true
 SN.node[*].Communication.Routing.collectOutputInfo = true
@@ -103,7 +105,7 @@ SN.node[*].Communication.Radio.RadioParametersFile = "../Parameters/Radio/80211g
 SN.node[*].Communication.Radio.collectTraceInfo = false
 SN.node[*].Communication.Radio.collectOutputInfo = false
 SN.node[*].Communication.Radio.maxPhyFrameSize = 1100
-SN.node[1..29].Communication.Radio.TxOutputPower = "12dBm" #Tx_dBm -10 -5 -1 2 6 9 12 13 17
+SN.node[1..10].Communication.Radio.TxOutputPower = "12dBm" #Tx_dBm -10 -5 -1 2 6 9 12 13 17
 SN.node[0].Communication.Radio.TxOutputPower = "30dBm" #Tx_dBm -10 -5 -1 2 6 9 12 13 17
 SN.node[*].Communication.Radio.mode = "11Mbps" #111Mbps, 1Mbps, 2Mbps, 5Mbps, 6Mbps, 9Mbps, 11Mbps, 12Mbps, 18Mbps 
 SN.node[*].Communication.Radio.CCAthreshold = -85
@@ -128,17 +130,17 @@ SN.node[*].MobilityManager.minSpeed = 5mps
 SN.node[*].MobilityManager.maxSpeed = 10mps
 SN.node[*].MobilityManager.r = 5m
 SN.node[*].MobilityManager.updateInterval = 0.1s
-SN.node[0..29].MobilityManager.isMobile = true
+SN.node[0..10].MobilityManager.isMobile = true
 # SN.node[0].MobilityManager.isMobile = false
 SN.node[*].MobilityManager.energyToFly = 20
 SN.node[*].MobilityManager.proposal = 2 # 2 - SDUAVNet
 
 # iNodes: [26 to 29]
-SN.node[26..29].MobilityManager.ProbWp = 0.2
-SN.node[26..29].MobilityManager.ProbStayAt = 0.2
-SN.node[26..29].MobilityManager.ProbScan = 0.2
-SN.node[26..29].MobilityManager.ProbHuit = 0.2
-SN.node[26..29].MobilityManager.ProbOval = 0.2
+SN.node[7..10].MobilityManager.ProbWp = 0.2
+SN.node[7..10].MobilityManager.ProbStayAt = 0.2
+SN.node[7..10].MobilityManager.ProbScan = 0.2
+SN.node[7..10].MobilityManager.ProbHuit = 0.2
+SN.node[7..10].MobilityManager.ProbOval = 0.2
 
 
 
