--- a/arquivos_ini/topology_30_nodes_200x200.ini
+++ b/arquivos_ini/topology_30_nodes_200x200.ini
@@ -20,44 +20,44 @@ SN.node[9].xCoor = 88.3806
 SN.node[9].yCoor = 21.9704
 SN.node[10].xCoor = 103.3112
 SN.node[10].yCoor = 170.4312
-SN.node[11].xCoor = 103.7978
-SN.node[11].yCoor = 101.8108
-SN.node[12].xCoor = 28.9322
-SN.node[12].yCoor = 86.6458
-SN.node[13].xCoor = 160.6446
-SN.node[13].yCoor = 72.7328
-SN.node[14].xCoor = 28.0158
-SN.node[14].yCoor = 156.3248
-SN.node[15].xCoor = 77.7776
-SN.node[15].yCoor = 140.6068
-SN.node[16].xCoor = 76.3964
-SN.node[16].yCoor = 89.6906
-SN.node[17].xCoor = 21.8302
-SN.node[17].yCoor = 35.8288
-SN.node[18].xCoor = 117.3748
-SN.node[18].yCoor = 142.2902
-SN.node[19].xCoor = 156.8394
-SN.node[19].yCoor = 20.7094
-SN.node[20].xCoor = 81.9156
-SN.node[20].yCoor = 57.5676
-SN.node[21].xCoor = 157.9566
-SN.node[21].yCoor = 55.5034
-SN.node[22].xCoor = 62.5846
-SN.node[22].yCoor = 115.0678
-SN.node[23].xCoor = 167.2594
-SN.node[23].yCoor = 170.8796
-SN.node[24].xCoor = 120.6674
-SN.node[24].yCoor = 50.2798
-SN.node[25].xCoor = 18.2382
-SN.node[25].yCoor = 183.3742
-SN.node[26].xCoor = 56.0680
-SN.node[26].yCoor = 52.2460
-SN.node[27].xCoor = 120.3878
-SN.node[27].yCoor = 119.0138
-SN.node[28].xCoor = 69.4234
-SN.node[28].yCoor = 161.3630
-SN.node[29].xCoor = 44.2352
-SN.node[29].yCoor = 26.3116
+# SN.node[11].xCoor = 103.7978
+# SN.node[11].yCoor = 101.8108
+# SN.node[12].xCoor = 28.9322
+# SN.node[12].yCoor = 86.6458
+# SN.node[13].xCoor = 160.6446
+# SN.node[13].yCoor = 72.7328
+# SN.node[14].xCoor = 28.0158
+# SN.node[14].yCoor = 156.3248
+# SN.node[15].xCoor = 77.7776
+# SN.node[15].yCoor = 140.6068
+# SN.node[16].xCoor = 76.3964
+# SN.node[16].yCoor = 89.6906
+# SN.node[17].xCoor = 21.8302
+# SN.node[17].yCoor = 35.8288
+# SN.node[18].xCoor = 117.3748
+# SN.node[18].yCoor = 142.2902
+# SN.node[19].xCoor = 156.8394
+# SN.node[19].yCoor = 20.7094
+# SN.node[20].xCoor = 81.9156
+# SN.node[20].yCoor = 57.5676
+# SN.node[21].xCoor = 157.9566
+# SN.node[21].yCoor = 55.5034
+# SN.node[22].xCoor = 62.5846
+# SN.node[22].yCoor = 115.0678
+# SN.node[23].xCoor = 167.2594
+# SN.node[23].yCoor = 170.8796
+# SN.node[24].xCoor = 120.6674
+# SN.node[24].yCoor = 50.2798
+# SN.node[25].xCoor = 18.2382
+# SN.node[25].yCoor = 183.3742
+# SN.node[26].xCoor = 56.0680
+# SN.node[26].yCoor = 52.2460
+# SN.node[27].xCoor = 120.3878
+# SN.node[27].yCoor = 119.0138
+# SN.node[28].xCoor = 69.4234
+# SN.node[28].yCoor = 161.3630
+# SN.node[29].xCoor = 44.2352
+# SN.node[29].yCoor = 26.3116
 #SN.node[30].xCoor = 100
 #SN.node[30].yCoor = 100
 #SN.node[31].xCoor = 65
